Creando estilo para contenedor

--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -2,3 +2,22 @@ body {
     background-color:red;
     color:blue;
 }
+#contenedor{
+
+    background-color:#A9BCF5;
+    margin: 0 auto;
+    margin-left: -550px;
+    margin-right: -650px;
+    padding: 0px;
+    padding-left:6px;
+    padding-top:6px;
+    padding-right:6px;
+    position: absolute;
+
+    left: 50%;
+    border-radius:20px;
+    display: table;
+    width: 1000px;
+    height: auto;
+
+}
