Creación de clase campos en css para los input

--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -21,3 +21,13 @@ body {
     height: auto;
 
 }
+.campos{
+    border: 1px solid #DBE1EB;
+    font-size: 18px;
+    font-family: Arial, Verdana;
+    border-radius: 4px;
+    background: #FFFFFF;
+    background: linear-gradient(left, #FFFFFF, #F7F9FA);
+
+
+}
